FIX: zoomed in PDF on iphones

--- a/style.css
+++ b/style.css
@@ -87,11 +87,20 @@ section.menu.no-point {
     padding: 48px;
 }
 
-.menu-pdf-iframes {
-    /* background-color: #33a58e; */
-    /* height: 50%; */
-    width: 100%;
-    aspect-ratio: 5/4;
+.pdf-container {
+  position: relative;
+  padding-bottom: 80%; /* Aspect ratio — adjust based on your PDF */
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.pdf-container iframe {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 .club-push {
